# doc-tool

./: .gitignore  pyproject.toml
src/doc_tool/: main.py
tests/: test_main.py
