[project]
name = "doc-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Bolletta",email = "matthewbolletta73@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "doc_tool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
