[project]
name = "doc-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Bolletta",email = "matthewbolletta73@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "doc_tool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
